Make injector working on JDK 17
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>